--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,9 @@ rust-version = "1.60"
 egui = "0.19.0"
 eframe = { version = "0.19.0", features = ["persistence"] }
 serde = { version = "1", features = ["derive"] } # You only need this if you want app persistence
+chrono = { version = "0.4", features = ["js-sys", "wasmbind"] }
+num = "0.4.0"
+num-bigint = "0.4.3"
 
 # native:
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
