--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,8 +33,8 @@ opt-level = 2 # fast and small wasm
 [patch.crates-io]
 
 # If you want to use the bleeding edge version of egui and eframe:
-egui = { git = "https://github.com/emilk/egui", branch = "master" }
-eframe = { git = "https://github.com/emilk/egui", branch = "master" }
+# egui = { git = "https://github.com/emilk/egui", rev = "8e79a5a8ae32daac964b6e4d073513bb596d5f96" }
+# eframe = { git = "https://github.com/emilk/egui", rev = "8e79a5a8ae32daac964b6e4d073513bb596d5f96" }
 
 # If you fork https://github.com/emilk/egui you can test with:
 # egui = { path = "../egui/crates/egui" }
